--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "seed": "tsx db/seed.ts",
+    "reset": "tsx db/reset.ts"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.13",
@@ -24,11 +26,14 @@
     "d3-dag": "^1.1.0",
     "d3-sankey": "^0.12.3",
     "dagre": "^0.8.5",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
     "formidable": "^3.5.4",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.447.0",
     "next": "^14.2.29",
     "path": "^0.12.7",
+    "postgres": "^3.4.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
@@ -45,6 +50,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
